# hospital-scheduler

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  client.py  env.py  graders.py  hospital_data.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
frontend/: index.html
server/: app.py  hospital_environment.py
tasks/: task_easy.json  task_expert.json  task_hard.json  task_medium.json  task_nightmare.json
